Buggfix: städer med samma namn är inte nödvändigtvis samma